crates/rome_formatter/tests/specs/prettier/js/function-single-destructuring/object.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 144
expression: object.js

---
# Input
```js
function StatelessFunctionalComponent({
  isActive,
  onFiltersUpdated,
  onSelect,
  onSubmitAndDeselect,
  onCancel,
  searchFilters,
  title,
  items,
}) {
  return <div />
}

function StatelessFunctionalComponent2({
  isActive = true,
  onFiltersUpdated = () => null,
  onSelect = () => null,
  onSubmitAndDeselect = () => null,
  onCancel = () => null,
  searchFilters = null,
  title = '',
  items = [],
} = {}) {
  return <div />
}

function StatelessFunctionalComponent3(
  {
    isActive,
    onFiltersUpdated = () => null,
    onSelect = () => null,
    onSubmitAndDeselect = () => null,
    onCancel = () => null,
    searchFilters = null,
    title = '',
    items = [],
  } = {
    isActive: true
  }
) {
  return <div />
}


class C {
  StatelessFunctionalComponent({
    isActive,
    onFiltersUpdated,
    onSelect,
    onSubmitAndDeselect,
    onCancel,
    searchFilters,
    title,
    items,
  }) {
    return <div />
  }
}

```

# Output
```js
function StatelessFunctionalComponent(
  {
    isActive,
    onFiltersUpdated,
    onSelect,
    onSubmitAndDeselect,
    onCancel,
    searchFilters,
    title,
    items,
  },
) {
  return <div />
}

function StatelessFunctionalComponent2(
  {
    isActive = true,
    onFiltersUpdated = () => null,
    onSelect = () => null,
    onSubmitAndDeselect = () => null,
    onCancel = () => null,
    searchFilters = null,
    title = "",
    items = [],
  } = {},
) {
  return <div />
}

function StatelessFunctionalComponent3(
  {
    isActive,
    onFiltersUpdated = () => null,
    onSelect = () => null,
    onSubmitAndDeselect = () => null,
    onCancel = () => null,
    searchFilters = null,
    title = "",
    items = [],
  } = { isActive: true },
) {
  return <div />
}

class C {
  StatelessFunctionalComponent(
    {
      isActive,
      onFiltersUpdated,
      onSelect,
      onSubmitAndDeselect,
      onCancel,
      searchFilters,
      title,
      items,
    },
  ) {
    return <div />
  }
}

```

<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
# Errors
```
error[SyntaxError]: JSX elements are a JSX only feature. Convert your file to a JSX file or remove the syntax.
   ┌─ object.js:11:10
   │
11 │   return <div />
   │          ^^^^^^^ JSX only syntax

error[SyntaxError]: JSX elements are a JSX only feature. Convert your file to a JSX file or remove the syntax.
   ┌─ object.js:24:10
   │
24 │   return <div />
   │          ^^^^^^^ JSX only syntax

error[SyntaxError]: JSX elements are a JSX only feature. Convert your file to a JSX file or remove the syntax.
   ┌─ object.js:41:10
   │
41 │   return <div />
   │          ^^^^^^^ JSX only syntax

error[SyntaxError]: JSX elements are a JSX only feature. Convert your file to a JSX file or remove the syntax.
   ┌─ object.js:56:12
   │
56 │     return <div />
   │            ^^^^^^^ JSX only syntax
=======
# Errors
```
error[SyntaxError]: jsx elements are a Jsx only feature. Convert your file to a Jsx file or remove the syntax.
   ┌─ object.js:11:10
   │  
11 │     return <div />
   │ ┌──────────^
12 │ │ }
   │ └─^ Jsx only syntax

error[SyntaxError]: jsx elements are a Jsx only feature. Convert your file to a Jsx file or remove the syntax.
   ┌─ object.js:24:10
   │  
24 │     return <div />
   │ ┌──────────^
25 │ │ }
   │ └─^ Jsx only syntax

error[SyntaxError]: jsx elements are a Jsx only feature. Convert your file to a Jsx file or remove the syntax.
   ┌─ object.js:41:10
   │  
41 │     return <div />
   │ ┌──────────^
42 │ │ }
   │ └─^ Jsx only syntax

error[SyntaxError]: jsx elements are a Jsx only feature. Convert your file to a Jsx file or remove the syntax.
   ┌─ object.js:56:12
   │  
56 │       return <div />
   │ ┌────────────^
57 │ │   }
   │ └───^ Jsx only syntax
>>>>>>> 1ab4ecffde (jsx parser enabled by language variant)


```

<<<<<<< HEAD
=======
>>>>>>> 0ae10e4634 (jsx in arrow functions and as statements)
=======
>>>>>>> 5f301e8a10 (formatter codegen supporting jsx)
=======
>>>>>>> 1ab4ecffde (jsx parser enabled by language variant)

